# aliscut

./: .gitignore  CMakeLists.txt  DrawAliasTable.cpp  LICENSE.md  Makefile  README.md  configure  main.cpp  test.cpp
cmake/: FindSlint.cmake
include/: utils.h
include/static/: drawTable.hpp
src/: DrawAliasTable.cpp  utils.cpp
ui/: app.slint  theme.slint
